Fix poor contrasts in dark mode in computed styles view
As the attached bug shows, the constrats in dark mode were pretty poor
at best and at times completely broken, rendering the data invisible
either by default or on hover.

This CL applies some specific theming to dark mode to ensure the
contrast is kept high at all times.

Fixed: 1053978
Bug: 1066415

--- a/front_end/elements/metricsSidebarPane.css
+++ b/front_end/elements/metricsSidebarPane.css
@@ -22,12 +22,36 @@
     contain: strict;
 }
 
-:host-context(.-theme-with-dark-background) .metrics {
+/* all computed layout attributes except position have a quite light
+ * background colour applied to them, so the default light font in dark
+ * mode is very low contrast. therefore we swap back to a dark font by
+ * default in dark mode because the background colours are lighter.
+ */
+:host-context(.-theme-with-dark-background) .metrics .margin,
+:host-context(.-theme-with-dark-background) .metrics .border,
+:host-context(.-theme-with-dark-background) .metrics .padding,
+:host-context(.-theme-with-dark-background) .metrics .content {
     color: #222;
 }
 
-:host-context(.-theme-with-dark-background) .metrics > div:hover {
+/* when you hover over margin the rest of the items get given a black
+ * background and so then the black text we set above means the numbers
+ * are invisible. So if you're hovering over the margin we set the
+ * colour of the text for all the children to light this also fixes
+ * hovering over anything within margin such as border/padding.
+ */
+:host-context(.-theme-with-dark-background) .metrics .margin:hover div {
     color: #ccc;
+}
+
+/* in dark mode the hover colour that is used when hovering on border
+ * constrasts very poorly with the lighter text colour used in dark mode
+ * so despite being in dark mode when you hover over the border we apply a
+ * dark font colour that contrasts much better with the background
+ */
+
+:host-context(.-theme-with-dark-background) .metrics .border:hover > div:not(.padding) {
+    color: #222;
 }
 
 .metrics .label {
